--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tripadviosr</title>
-    <link rel="stylesheet" href="tripadvios__1.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"> -->
+
+    <link rel="stylesheet" href="./tripadvios__1.css">
+
 </head>
 
 <body>
@@ -278,6 +281,226 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Travell Chocies -->
+    <section class="Travell_Overall_sec">
+        <div class="Trip_Travell_sec">
+            <h3 class="TravelL_title"> Take a trip to a traveller fave</h3>
+            <p class="Travell_desc"> Travellers’ Choice Best of the Best Destinations</p>
+        </div>
+
+        <div class="Travell_img_continer">
+
+            <div class="Travell_sec1">
+                <img src="./Images/Travell_1.jpg" class="Top_dest_img">
+                <h2 class="Top_dest_1">Top Destinations</h2>
+            </div>
+
+            <div class="Travell_sec1">
+                <img src="./Images/Travell_2.jpg" class="Top_dest_img">
+                <h2 class="Top_dest_2">Trending Destinations</h2>
+            </div>
+
+            <div class="Travell_sec1">
+                <img src="./Images/Travell_3.jpg" class="Top_dest_img">
+                <h2 class="Top_dest_3">Food Destinations</h2>
+            </div>
+
+            <div class="Travell_sec1">
+                <img src="./Images/Travell_4.jpg" class="Top_dest_img">
+                <h2 class="Top_dest_4">Nature Destinations</h2>
+            </div>
+
+
+            <div class="Travell_sec1">
+                <img src="./Images/Travell_5.jpg" class="Top_dest_img">
+                <h2 class="Top_dest_5">Culture Destinations</h2>
+            </div>
+
+        </div>
+        <!-- <div class="right_left_arrow">
+
+            <div class="left_arrow">
+                <img src="./Images/back-button.png" class="left_arrow">
+
+
+            </div>
+
+            <div class="right_arrow">
+                <img src="./Images/back-button.png" class="left_arrow">
+
+
+            </div>
+
+        </div> -->
+
+
+
+
+    </section>
+
+    <!-- Tiur Section -->
+    <section class="Tour__section__overall">
+
+
+        <div class="Tour_section_title">
+
+            <h3 class="tour_title">Ways to tour Chennai (Madras)</h3>
+            <p class="tour_desc">Book these experiences for a close-up look at Chennai (Madras).</p>
+        </div>
+
+
+        <div class="Tour_image_container">
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_1.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_2.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_3.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_4.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_5.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_6.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_7.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_8.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+            <div class="Tour_img_1_overall">
+
+                <img src="./Images/Tour_9.jpg" class="Tour_image_1">
+
+                <div class="Tour_desc_1">
+                    <p class="Tour_1_desc">Total Chennai city tour in Private car with guide & lunch by Wonder tours</p>
+
+
+                    <p class="tour_1_rate">🟢🟢🟢🟢🟢 32</p>
+
+                    <p class="tour_1_price">from ₹6,382 per adult</p>
+                    <img src="./Images/favourite.png" class="fav_btn">
+                </div>
+            </div>
+
+
+
+
+        </div>
+
+
+
+
+    </section>
+
+
+
 
 </body>
 
