All most completed

--- a/index.html
+++ b/index.html
@@ -500,6 +500,244 @@
     </section>
 
 
+    <!-- More To Explore section -->
+    <section class="more_explore_overall">
+
+
+        <div class="more_explore_title">
+            <h2 class="more_explore_title">More to explore</h2>
+
+            <div class="explore_img_container">
+
+                <div class="explore_1">
+                    <img src="./Images/explore_imge_1.jpg" class="explore_1_img">
+
+                    <img src="./Images/favourite.png" class="explor_fav_btn">
+
+                    <p class="explore_1_desc">A guide to Surry Hills, Sydney: great <br>food, Aussie pubs, and vintage
+                        shops</p>
+
+                </div>
+
+
+                <div class="explore_1">
+                    <img src="./Images/explore_imge_2.jpg" class="explore_2_img">
+                    <img src="./Images/favourite.png" class="explor_fav_btn">
+                    <p class="explore_1_desc">A guide to Surry Hills, Sydney: great <br>food, Aussie pubs, and vintage
+                        shops</p>
+
+                </div>
+
+                <div class="explore_1">
+                    <img src="./Images/explore_imge_3.jpg" class="explore_3_img">
+                    <img src="./Images/favourite.png" class="explor_fav_btn">
+
+                    <p class="explore_1_desc">A guide to Surry Hills, Sydney: great <br>food, Aussie pubs, and vintage
+                        shops</p>
+
+                </div>
+
+
+                <div class="explore_1">
+                    <img src="./Images/explore_imge_4.jpg" class="explore_4_img">
+                    <img src="./Images/favourite.png" class="explor_fav_btn">
+
+                    <p class="explore_1_desc">A guide to Surry Hills, Sydney: great <br>food, Aussie pubs, and vintage
+                        shops</p>
+
+                </div>
+
+
+                <div class="explore_1">
+                    <img src="./Images/explore_imge_5.jpg" class="explore_5_img">
+                    <img src="./Images/favourite.png" class="explor_fav_btn">
+
+                    <p class="explore_1_desc">A guide to Surry Hills, Sydney: great <br>food, Aussie pubs, and vintage
+                        shops</p>
+
+                </div>
+
+
+
+                <div class="explore_1">
+                    <img src="./Images/explore_imge_6.jpg" class="explore_6_img">
+                    <img src="./Images/favourite.png" class="explor_fav_btn">
+                    <p class="explore_1_desc">A guide to Surry Hills, Sydney: great <br>food, Aussie pubs, and vintage
+                        shops</p>
+
+                </div>
+
+
+
+                <div class="explore_1">
+                    <img src="./Images/explore_imge_7.jpg" class="explore_7_img">
+                    <img src="./Images/favourite.png" class="explor_fav_btn">
+                    <p class="explore_1_desc">A guide to Surry Hills, Sydney: great <br>food, Aussie pubs, and vintage
+                        shops</p>
+
+                </div>
+
+
+
+                <div class="explore_1">
+                    <img src="./Images/explore_imge_8.jpg" class="explore_8_img">
+                    <img src="./Images/favourite.png" class="explor_fav_btn">
+
+                    <p class="explore_1_desc">A guide to Surry Hills, Sydney: great <br>food, Aussie pubs, and vintage
+                        shops</p>
+
+                </div>
+
+
+            </div>
+
+
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
+
+
+    <!--    Dream the next trip section -->
+
+
+    <section class="Dream_next_trip_overall">
+
+        <div class="Dream_next_trip">
+
+            <h2 class="Dream_title">Dream Your Next Trip</h2>
+
+            <h3 class="Dream_desc">Weekend getaways from Chennai (Madras)</h3>
+
+            <div class="Dream_image_overll">
+                <div class="Dream_img_1">
+
+                    <img src="./Images/Dream_1.jpg" class="Dream_img">
+
+                    <h2 class="pondy">Pondicherry, India</h2>
+
+                </div>
+                <div class="Dream_img_1">
+
+                    <img src="./Images/Dream_2.jpg" class="Dream_img">
+
+                    <h2 class="maha">Mahabalipuram, India</h2>
+
+                </div>
+                <div class="Dream_img_1">
+
+                    <img src="./Images/Dream_3.jpg" class="Dream_img">
+                    <h2 class="Bengal"> Bengaluru, India</h2>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
+
+
+    <!-- Video Play Section -->
+
+
+
+    <section class="Video_overall">
+
+
+        <video autoplay muted controls class="video_play">
+
+            <source src="https://video-direct-tacdn-com.global.ssl.fastly.net/media/video-v/2b/31/cf/e8/caption_720.mp4"
+                type="video/mp4">
+
+
+
+        </video>
+        <div class="video_content">
+
+            <h2 class="video_title">Watch The Wanderer Season 1 on Amazon Prime Video</h2>
+            <p class="video_desc">Follow authentic travellers as they visit unknown destinations to write their own
+                travel guide</p>
+
+
+        </div>
+
+
+
+    </section>
+
+
+    <!-- Best Awards section -->
+
+    <section class="Best_award_overall">
+
+        <div class="Best_award_overall_1">
+            <div class="Best_award_s1">
+
+                <img src="https://static.tacdn.com/img2/travelers_choice/2023/TC_badge_yellow.svg"
+                    class="best_awards_log">
+
+                <h2 class="best_award_1">Travellers' Choice Awards Best of the Best</h2>
+
+                <h3 class="best_award_2">Among our top 1% of places, stays, eats, and experiences—decided by you.</h3>
+
+                <button class="winners_btn"> see the winners</button>
+
+
+            </div>
+
+
+
+            <div class="best_award_img">
+                <img src="./Images/tc_cards_2024.png" class="best_award_img_1">
+
+
+            </div>
+        </div>
+
+
+
+
+    </section>
+
+
+
+
+
+
 
 
 </body>
