Pending footer section

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
                 <h3 class="best_award_2">Among our top 1% of places, stays, eats, and experiences—decided by you.</h3>
 
-                <button class="winners_btn"> see the winners</button>
+                <button class="winners_btn"> <strong> See the winners</strong> </button>
 
 
             </div>
@@ -736,8 +736,31 @@
 
 
 
+    <!-- footer section -->
 
 
+    <footer class="footer_section_overall">
+
+
+   <div >
+
+
+   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </footer>
 
 
 </body>
