--- a/index.html
+++ b/index.html
@@ -705,20 +705,23 @@
     <section class="Best_award_overall">
 
         <div class="Best_award_overall_1">
-            <div class="Best_award_s1">
 
-                <img src="https://static.tacdn.com/img2/travelers_choice/2023/TC_badge_yellow.svg"
-                    class="best_awards_log">
+            <div class="best_title_overall">
+                <div class="Best_award_s1">
 
-                <h2 class="best_award_1">Travellers' Choice Awards Best of the Best</h2>
+                    <img src="https://static.tacdn.com/img2/travelers_choice/2023/TC_badge_yellow.svg"
+                        class="best_awards_log">
 
-                <h3 class="best_award_2">Among our top 1% of places, stays, eats, and experiences—decided by you.</h3>
+                    <h2 class="best_award_1">Travellers' Choice Awards Best of the Best</h2>
 
-                <button class="winners_btn"> see the winners</button>
+                    <h3 class="best_award_2">Among our top 1% of places, stays, eats, and experiences—decided by you.
+                    </h3>
+
+                    <button class="winners_btn"> See the winners</button>
 
 
+                </div>
             </div>
-
 
 
             <div class="best_award_img">
