--- a/index.html
+++ b/index.html
@@ -706,19 +706,19 @@
 
         <div class="Best_award_overall_1">
 
-            <div class="best_title_overall">
-                <div class="Best_award_s1">
+            <!-- <div class="best_title_overall"> -->
+            <div class="Best_award_s1">
 
-                    <img src="https://static.tacdn.com/img2/travelers_choice/2023/TC_badge_yellow.svg"
-                        class="best_awards_log">
+                <img src="https://static.tacdn.com/img2/travelers_choice/2023/TC_badge_yellow.svg"
+                    class="best_awards_log">
 
-                    <h2 class="best_award_1">Travellers' Choice Awards Best of the Best</h2>
+                <h2 class="best_award_1">Travellers' Choice Awards Best of the Best</h2>
 
-                    <h3 class="best_award_2">Among our top 1% of places, stays, eats, and experiences—decided by you.
-                    </h3>
+                <h3 class="best_award_2">Among our top 1% of places, stays, eats, and experiences—decided by you.
+                </h3>
 
                 <button class="winners_btn"> <strong> See the winners</strong> </button>
-                    <button class="winners_btn"> See the winners</button>
+
 
 
             </div>
@@ -730,6 +730,7 @@
 
 
             </div>
+            <!-- </div> -->
         </div>
 
 
@@ -746,10 +747,98 @@
     <footer class="footer_section_overall">
 
 
-   <div >
+        <div class="footer_insid_overall">
 
 
-   </div>
+            <div class="About_Tripadvisor_overall">
+                <div>
+                    <img src="./Images/add.png" class="plus_image">
+                </div>
+
+                <div class="About_Trip_title">
+
+                    <p>About Tripadvisor</p>
+                </div>
+            </div>
+
+            <div class="About_Tripadvisor_overall">
+                <div>
+                    <img src="./Images/add.png" class="plus_image">
+                </div>
+
+                <div class="About_Trip_title">
+
+                    <p>Explore</p>
+                </div>
+            </div>
+
+            <div class="About_Tripadvisor_overall">
+                <div>
+                    <img src="./Images/add.png" class="plus_image">
+                </div>
+
+                <div class="About_Trip_title">
+
+                    <p>Do Business With Us</p>
+                </div>
+            </div>
+
+
+            <div class="About_Tripadvisor_overall">
+                <div>
+                    <img src="./Images/add.png" class="plus_image">
+                </div>
+
+                <div class="About_Trip_title">
+
+                    <p>Get The App</p>
+                </div>
+            </div>
+
+
+            <div class="About_Tripadvisor_overall">
+                <div>
+                    <img src="./Images/add.png" class="plus_image">
+                </div>
+
+                <div class="About_Trip_title">
+
+                    <p>Tripadvisor Sites</p>
+                </div>
+            </div>
+
+
+            <div class="button_overall">
+
+                <div class="btn_inr">
+                    <button type="button"> INR</button>
+                    <img src="./Images/down.png" class="dropdown_arrow_1">
+                </div>
+                <div class="btn_india">
+                    <button type="button"> India</button>
+                    <img src="./Images/down.png" class="dropdown_arrow_2">
+                </div>
+
+            </div>
+
+
+
+
+
+
+            <div  class="all_social_media">
+
+                <img src="./Images/facebook.png" class="facebook_icon">
+                <img src="./Images/twitter.png" class="facebook_icon">
+                <img src="./Images/pinterest.png" class="facebook_icon">
+                <img src="./Images/instagram.png" class="facebook_icon">
+
+
+
+            </div>
+
+
+        </div>
 
 
 
